# i2c-ble-logger

./: .gitignore  CLAUDE.md  README.md  platformio.ini
i2c-ble-client/: Cargo.toml  README.md  run.sh
i2c-ble-client/src/: ble.rs  main.rs  tui.rs
src/: AddressFilter.cpp  AddressFilter.h  BLESerial.cpp  BLESerial.h  ConfigParser.cpp  ConfigParser.h  I2CFormatter.cpp  I2CFormatter.h  I2CListener.cpp  I2CListener.h  i2cble.cpp  i2cble.ino
